<resources>
    <string name="app_name">BusanPartners</string>
    <string name="student_authentication_onboarding_1">Student Authentication Process</string>
    <string name="student_description_onboarding_1">For smooth service delivery, a simple authentication process is required. \n Verification of your university email is required.</string>
    <string name="student_authentication_onboarding_2">Student ID Authentication Process</string>
    <string name="student_description_onboarding_2">Please submit a photo of your student ID showing your name.</string>
    <string name="student_authentication_onboarding_3">Upon completion of authentication</string>
    <string name="student_description_onboarding_3">Authenticated students can chat freely without any restrictions. \n Make new connections and valuable experiences.</string>
    <string name="start_text_advice">By continuing on this application, you agree to our Terms of Use and Privacy Policy.</string>
    <string name="traveler_authentication_onboarding_1">Traveler Authentication Process</string>
    <string name="traveler_description_onboarding_1">For a smooth service delivery, we require a simple authentication process.</string>
    <string name="traveler_authentication_onboarding_2">Please capture or take a photo with your name on it.</string>
    <string name="traveler_description_onboarding_2">Please attach at least two photos, including your flight ticket and proof of accommodation.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="init_title_one">Welcome to BusanPartners!</string>
    <string name="init_introduction_one">We provide opportunities for cultural exchange by connecting foreign tourists visiting Busan with local university students.</string>
    <string name="init_title_two">Share a message with your counterpart.</string>
    <string name="init_introduction_two">Complete the authentication and start chatting with your desired partner.</string>
    <string name="init_title_three">Experience a cultural exchange.</string>
    <string name="init_introduction_three">Interact with different people and expand your horizons.</string>
    <string name="init_title_four">Experience cultural exchange.</string>
    <string name="map_sharing">Share Location</string>
    <string name="share_the_map">Share the location</string>
    <string name="details">Details</string>
    <string name="who_are_you">Who are you?</string>
    <string name="select_student_or_traveler">Please select Student or Traveler.</string>
    <string name="university_student">Student</string>
    <string name="selected_university_info">Interact with different people and broaden your horizons.</string>
    <string name="traveler">Traveler</string>
    <string name="selected_traveler_info">Experience special moments in the daily life of Busan.</string>
    <string name="enter_email">Enter your email</string>
    <string name="email_authentication">1. Email Authentication</string>
    <string name="email_authentication_info">• Enter the email of the university you are currently attending, and enter the verification number you received in the email.</string>
    <string name="email">Email</string>
    <string name="send_authentication_email">Send Authentication Email</string>
    <string name="attach_image">Attach Image</string>
    <string name="student_card">2. Student ID</string>
    <string name="student_card_info">• Upload a photo that shows your name and student ID number.</string>
    <string name="select_image">Select Image</string>
    <string name="send">Send</string>
    <string name="enter_authentication_number">Enter Authentication Number</string>
    <string name="authentication_number_title">The authentication number has been sent.</string>
    <string name="authentication_number_info">Please enter your authentication number.</string>
    <string name="do_it">Confirm</string>
    <string name="authentication_number_complete">Authentication Number Verified</string>
    <string name="next_button">Next</string>
    <string name="faq_header">Frequently Asked Questions</string>
    <string name="location">Location</string>
    <string name="festival_time">Festival Period</string>
    <string name="homepage">Homepage</string>
    <string name="check_the_location_button">Check Location</string>
    <string name="current_festival">Current Festival</string>
    <string name="nearest_place">Nearby attractions</string>
    <string name="login_title">Meet precious connections in Busan \nStart now!</string>
    <string name="google_login_btn">Google Login</string>
    <string name="agree_personal_information">By proceeding, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="authentication">Authentication</string>
    <string name="authenticate">Authenticate</string>
    <string name="notifications">Notifications</string>
    <string name="all_notification">All Notifications</string>
    <string name="chat_notification">Chat Notifications</string>
    <string name="regional">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="translate_language">App languages</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="use_information">Terms of Service</string>
    <string name="personal_information">Privacy Policy</string>
    <string name="delete_user">Delete Account</string>
    <string name="traveler_authentication_title">Foreign Tourist Authentication Guide</string>
    <string name="traveler_small_title_one">1. Airplane ticket or Ship ticket</string>
    <string name="traveler_small_info_one">• Please capture or photograph and upload so we can verify your name and date.</string>
    <string name="traveler_small_info_two">• Other personal details can be masked.</string>
    <string name="traveler_small_info_three">• Provide proof of your stay at a property booked on a website or app such as Agoda, Expedia, Trip.com, etc.</string>
    <string name="traveler_small_info_four">• Your name and dates should be clearly visible. Other personal details can be masked.</string>
    <string name="traveler_small_title_two">2. Proof of Accommodation</string>
    <string name="traveler_small_info_five">It is most important that the names and dates match. \nPlease upload at least one photo each. \Uploaded photos will be deleted 7 days after verification</string>
    <string name="student_list">Student List</string>
    <string name="connect_student">Contact</string>
    <string name="deepl_service_info">This has been automatically translated using the DeepL service. \nSome translations may not be accurate.</string>
    <string name="delete_user_title_one">It was nice to meet you.</string>
    <string name="delete_user_info">Please tell us why you want to delete your account. \nYour feedback will help us improve our service.</string>
    <string name="delete_user_radio_one">I am not comfortable with the service.</string>
    <string name="delete_user_radio_two">I am concerned about the security of my personal information.</string>
    <string name="delete_user_radio_three">I am dissatisfied with the matching system.</string>
    <string name="delete_user_radio_four">I have experienced inconvenience from the other person.</string>
    <string name="delete_user_radio_five">It is too complicated to use.</string>
    <string name="delete_user_radio_six">Other (enter your own)</string>
    <string name="delete_user_btn">Delete</string>
    <string name="profile_detail">Profile Screen</string>
    <string name="profile_show_chip_group">Create keywords that represent you.</string>
    <string name="add_tag">Add a tag</string>
    <string name="profile_can_get_a_call">You can be contacted by travelers.</string>
    <string name="name">Name</string>
    <string name="major">Major (optional)</string>
    <string name="profile_introduce">Write a brief introduction about yourself.</string>
    <string name="save_btn">Save</string>
    <string name="profile_deepl_info">Your profile will be automatically translated for the other party using DeepL. \n Save will start the translation. Please be patient.</string>
    <string name="header_title_terms">Terms of Service</string>
    <string name="terms_of_service_date">Last updated: July 10, 2024</string>
    <string name="terms_of_service_intro">Welcome! Thank you for using BusanPartners (hereinafter referred to as \'our app\'). These Terms of Service describe the conditions and guidelines for use of our App, and you must comply with them.</string>
    <string name="terms_of_service_1_title">1. Introduction</string>
    <string name="terms_of_service_1_content">BusanPartners is a service that connects university students in Busan with foreign tourists. Users can also communicate with each other through the chat function.</string>
    <string name="terms_of_service_2_title">2. Sign up</string>
    <string name="terms_of_service_2_content">Users sign up through Google Sign-in, which collects their name, email, and profile picture. If you are a university student, you will need to submit your university email verification and student ID photo. If you are a tourist, you will need to submit your airplane/boat ticket and proof of accommodation.</string>
    <string name="terms_of_service_3_title">3. Use of Location Information</string>
    <string name="terms_of_service_3_content">Our app collects your location information to provide you with services to introduce you to nearby tourist attractions. Location information is only collected with your consent, and you can stop providing your location information at any time. If location information is disabled, the feature will not be available. Location information is protected in accordance with our Privacy Policy.</string>
    <string name="terms_of_service_4_title">4. Privacy</string>
    <string name="terms_of_service_4_content">Our app is committed to protecting your privacy, which is handled in accordance with our Privacy Policy.</string>
    <string name="terms_of_service_5_title">5. Account Responsibilities</string>
    <string name="terms_of_service_5_content">You must keep your account information confidential and not share it with anyone else. You are responsible for all activity on your account."</string>
    <string name="terms_of_service_6_title">6. Prohibited Conduct</string>
    <string name="terms_of_service_6_content">You may not:\n\nUse unlawful activities\nInfringe on the rights of others\nProvide false information\nAttempt to disrupt services or hack into systems\nTransmit or share inappropriate content</string>
    <string name="terms_of_service_7_title">7. Service Interruptions and Changes</string>
    <string name="terms_of_service_7_content">Our App may temporarily or permanently discontinue or change the Service as needed. If this happens, we will give you advance notice and endeavor to ensure that you are not disadvantaged.</string>
    <string name="terms_of_service_8_title">8. Limitation of Liability</string>
    <string name="terms_of_service_8_content">Our app is not responsible for disputes between users. We are not liable for any damages arising from the use of the service.</string>
    <string name="terms_of_service_9_title">9. Changes to the Terms of Service</string>
    <string name="terms_of_service_9_content">These Terms are subject to change due to changes in law or the policies of the Service. We will notify you of material changes via a notice.</string>
    <string name="terms_of_service_10_title">10. Contact Us</string>
    <string name="terms_of_service_10_content">For questions about the Terms of Service, please contact appbusanpartners@gmail.com.</string>
</resources>