<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/titleContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFFFF"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="18dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="0dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/rk3nhpswmkf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/enter_authentication_number"
                    android:textColor="#1C160C"
                    android:textSize="18sp" />

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="0dp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_email_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFFFF"
                android:orientation="vertical"

                android:paddingHorizontal="16dp"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/titleContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_marginBottom="6dp"
                    android:text="@string/authentication_number_title"
                    android:textColor="#1C160C"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewEventPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_number_info"
                    android:layout_gravity="center"

                    android:textColor="#A08249"
                    android:textSize="14sp" />
            </LinearLayout>

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:height="40dp"
                app:width="40dp"
                app:bar_enabled="true"
                app:bar_height="2dp"
                app:length="4"
                app:otp_text_size="24dp"
                app:layout_constraintTop_toBottomOf="@id/linear_email_textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5" />

            <LinearLayout
                android:id="@+id/certificationNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/otp_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSendVerificationCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/cr24bff009963"
                android:gravity="center"
                android:paddingVertical="1dp"
                android:text="@string/do_it"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/certificationNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>